@@ -73,9 +73,15 @@ rhelp <- function(topic, package = NULL, lib.loc = NULL,
     lib.loc <- paste0("'", as.character(lib.loc), "'")
 
   if (iam("remote") && inwhileloop("server"))
-    help_type <- "text"
+  {
+    if(!isrmoteon())
+      help_type <- "text"
+    else
+      help_type <- "html"
+  }
   else
     help_type <- getOption("help_type")
+
   help_type <- paste0("'", as.character(help_type), "'")
 
   ### Execute the help command.
@@ -89,20 +95,28 @@ rhelp <- function(topic, package = NULL, lib.loc = NULL,
   ### Return Rd when server is on
   if (iam("remote") && inwhileloop("server"))
   {
-    ### Ask client to show
-    if (class(ret) != "try-error")
-      set.status(need_auto_rhelp_on, TRUE)
+    if(!isrmoteon())
+    {
+      ### Ask client to show
+      if (class(ret) != "try-error")
+        set.status(need_auto_rhelp_on, TRUE)
 
-    ### Deal with "help_files_with_topic" or "packageInfo"
-    if (class(ret) == "help_files_with_topic")
-      Rd <- print.rhelp_files_with_topic(ret)
-    else if (class(ret) == "packageInfo")
-      Rd <- print.rpackageInfo(ret)
+      ### Deal with "help_files_with_topic" or "packageInfo"
+      if (class(ret) == "help_files_with_topic")
+        Rd <- print.rhelp_files_with_topic(ret)
+      else if (class(ret) == "packageInfo")
+        Rd <- print.rpackageInfo(ret)
+      else
+        Rd <- ret
+
+      ### Visible return is necessary because of retmoter_server_eval().
+      return(Rd)
+    }
     else
-      Rd <- ret
-
-    ### Visible return is necessary because of retmoter_server_eval().
-    return(Rd)
+    {
+      print(ret)
+      return(invisible(ret))
+    }
   }
   else
     return(ret)
@@ -131,7 +145,7 @@ help <- rhelp
   ret <- eval(parse(text = txt))
 
   ### Return Rd when server is on
-  if (iam("remote") && inwhileloop("server"))
+  if (iam("remote") && inwhileloop("server") && !isrmoteon())
   {
     ### Ask client to show
     if (class(ret) != "try-error")
